k8s/ingress/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx
spec:
    selector:
        matchLabels:
            name: nginx
    replicas: 3
    template:
        metadata:
            labels:
                name: nginx
        spec: 
            containers:
            - name: nginx
              image: nginx:latest
              ports: 
              - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
    name: my-nginx
spec:
    selector:
      name: nginx
    ports:
    - name: http
      port: 80
      targetPort: 80
