k8s/ingress/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: dev.zhongmajr.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: my-nginx
          servicePort: 80
